--- a/TripWithMe/res/layout/activity_traveler_details.xml
+++ b/TripWithMe/res/layout/activity_traveler_details.xml
@@ -1,11 +1,15 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"   
-    android:id="@+id/traveler_details"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/traveler_details"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="${relativePackage}.${activityClass}" >
-	
-   
+
+    <Button
+        android:id="@+id/traveler_details_btn"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerVertical="true"
+        android:background="@null" />
 
 </RelativeLayout>
-
