--- a/TripWithMe/res/layout/activity_chat.xml
+++ b/TripWithMe/res/layout/activity_chat.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:windowSoftInputMode="adjustPan"
     android:orientation="vertical">
 
     <!-- 메뉴표시줄 -->
@@ -27,18 +28,22 @@
         <Button
             android:id="@+id/main_btn_logo"
             android:layout_width="150dp"
-            android:layout_height="18dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_height="28dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/main_btn_logo"
+            android:text="장동건"
+            android:textColor="#ffffff"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:background="@color/mainBarBgColor"
             android:scaleType="centerCrop" />
 
         <Button
-            android:id="@+id/main_btn_mypage"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:id="@+id/chat_calendar"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
@@ -46,20 +51,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="5dp"
-            android:background="@drawable/main_btn_mypage" />
-
-        <Button
-            android:id="@+id/main_btn_write_contents"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_centerVertical="true"
-            android:layout_marginBottom="5dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="5dp"
-            android:layout_toLeftOf="@id/main_btn_mypage"
-            android:layout_toStartOf="@id/main_btn_mypage"
-            android:background="@drawable/main_btn_write_contents" />
+            android:background="@drawable/chat_calendar" />
     </RelativeLayout>
 
     <!-- 메뉴표시줄 아래 전체 뷰_드로워레이아웃 -->
@@ -90,7 +82,8 @@
             android:layout_gravity="start"
             android:background="#FFFFFF"
             android:orientation="vertical" 
-            android:clickable="true">
+            android:clickable="true"
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
