--- a/TripWithMe/res/layout/activity_chat.xml
+++ b/TripWithMe/res/layout/activity_chat.xml
@@ -71,7 +71,7 @@
             android:layout_height="match_parent" 
             android:divider="@null"
 			android:dividerHeight="0dp"
-            android:background="#FFFFFF"/>
+            android:background="@drawable/sea1"/>
 
         <!-- 드러워 -->
 
