--- a/TripWithMe/res/layout/activity_main.xml
+++ b/TripWithMe/res/layout/activity_main.xml
@@ -103,7 +103,7 @@
 
                     <Spinner
                         android:id="@+id/user_sel_spinner"
-                        android:layout_width="100dp"
+                        android:layout_width="90dp"
                         android:layout_height="fill_parent"
                         android:layout_marginBottom="0dp"
                         android:layout_marginLeft="2dp"
@@ -117,8 +117,8 @@
                         android:layout_width="25dp"
                         android:layout_height="25dp"
                         android:layout_centerVertical="true"
-                        android:layout_marginLeft="12dp"
-                        android:layout_marginStart="12dp"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginStart="3dp"
                         android:layout_toEndOf="@id/user_sel_spinner"
                         android:layout_toRightOf="@id/user_sel_spinner"
                         android:background="@drawable/main_btn_calendar" />
@@ -137,18 +137,16 @@
                     <EditText
                         android:id="@+id/searchText"
                         android:layout_width="wrap_content"
-                        android:layout_height="fill_parent"
+                        android:layout_height="40dp"
                         android:layout_centerVertical="true"
-                        android:layout_marginBottom="0.5dp"
-                        android:layout_marginLeft="12dp"
-                        android:layout_marginStart="12dp"
-                        android:layout_marginTop="0.5dp"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginStart="3dp"
                         android:layout_toEndOf="@id/calender"
                         android:layout_toRightOf="@id/calender"
                         android:layout_toStartOf="@id/main_btn_search"
                         android:layout_toLeftOf="@id/main_btn_search"
                         android:hint="@string/search_helper"
-                        android:textSize="12sp" />
+                        android:textSize="11sp" />
 
                     
                 </RelativeLayout>
