--- a/TripWithMe/res/layout/activity_main.xml
+++ b/TripWithMe/res/layout/activity_main.xml
@@ -13,7 +13,6 @@
         android:layout_weight="4"
         android:background="@color/mainBarBgColor"
         android:orientation="horizontal" >
-"res/layout/activity_main.xml"
         <Button
             android:id="@+id/main_btn_popup_menu"
             android:layout_width="25dp"
@@ -228,7 +227,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
+                android:layout_height="50dp"
                 android:layout_gravity="start"
                 android:background="#FFFFFF"
                 android:orientation="horizontal" >
@@ -248,7 +247,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
+                android:layout_height="50dp"
                 android:layout_gravity="start"
                 android:background="#FFFFFF"
                 android:orientation="horizontal" >
@@ -268,7 +267,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
+                android:layout_height="50dp"
                 android:layout_gravity="start"
                 android:background="#FFFFFF"
                 android:orientation="horizontal" >
@@ -285,10 +284,50 @@
                     android:src="@drawable/drawer_talk"
                     />
             </RelativeLayout>
-
+			
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
+                android:layout_height="50dp"
+                android:layout_gravity="start"
+                android:background="#FFFFFF"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/drawer_friend"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:maxHeight="70dp"
+                    android:maxWidth="160dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/drawer_friend"
+                    />
+            </RelativeLayout>
+            
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="start"
+                android:background="#FFFFFF"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/drawer_message"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:maxHeight="70dp"
+                    android:maxWidth="160dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/drawer_message"
+                    />
+            </RelativeLayout>
+            
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
                 android:layout_gravity="start"
                 android:background="#FFFFFF"
                 android:orientation="horizontal" >
