--- a/TripWithMe/res/layout/activity_travelerlist.xml
+++ b/TripWithMe/res/layout/activity_travelerlist.xml
@@ -138,15 +138,16 @@
                     android:id="@+id/drawer_picture"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
                     android:maxHeight="160dp"
                     android:maxWidth="160dp"
-                    android:src="@drawable/drawer_picture" />
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/drawer_picture"
+                    />
             </LinearLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
+                android:layout_height="50dp"
                 android:layout_gravity="start"
                 android:background="#FFFFFF"
                 android:orientation="horizontal" >
@@ -157,15 +158,16 @@
                     android:layout_height="match_parent"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:adjustViewBounds="true"
                     android:maxHeight="70dp"
                     android:maxWidth="160dp"
-                    android:src="@drawable/drawer_recommend" />
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/drawer_recommend"
+                    />
             </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
+                android:layout_height="50dp"
                 android:layout_gravity="start"
                 android:background="#FFFFFF"
                 android:orientation="horizontal" >
@@ -176,15 +178,16 @@
                     android:layout_height="match_parent"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:adjustViewBounds="true"
                     android:maxHeight="70dp"
                     android:maxWidth="160dp"
-                    android:src="@drawable/drawer_real" />
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/drawer_real"
+                    />
             </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
+                android:layout_height="50dp"
                 android:layout_gravity="start"
                 android:background="#FFFFFF"
                 android:orientation="horizontal" >
@@ -195,15 +198,56 @@
                     android:layout_height="match_parent"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:adjustViewBounds="true"
                     android:maxHeight="70dp"
                     android:maxWidth="160dp"
-                    android:src="@drawable/drawer_talk" />
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/drawer_talk"
+                    />
             </RelativeLayout>
-
+			
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
+                android:layout_height="50dp"
+                android:layout_gravity="start"
+                android:background="#FFFFFF"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/drawer_friend"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:maxHeight="70dp"
+                    android:maxWidth="160dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/drawer_friend"
+                    />
+            </RelativeLayout>
+            
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="start"
+                android:background="#FFFFFF"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/drawer_message"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:maxHeight="70dp"
+                    android:maxWidth="160dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/drawer_message"
+                    />
+            </RelativeLayout>
+            
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
                 android:layout_gravity="start"
                 android:background="#FFFFFF"
                 android:orientation="horizontal" >
@@ -214,10 +258,11 @@
                     android:layout_height="match_parent"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:adjustViewBounds="true"
                     android:maxHeight="70dp"
                     android:maxWidth="160dp"
-                    android:src="@drawable/drawer_config" />
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/drawer_config"
+                    />
             </RelativeLayout>
         </LinearLayout>
     </android.support.v4.widget.DrawerLayout>
