--- a/TripWithMe/res/layout/activity_chat.xml
+++ b/TripWithMe/res/layout/activity_chat.xml
@@ -209,6 +209,26 @@
                 android:orientation="horizontal" >
 
                 <ImageView
+                    android:id="@+id/drawer_market"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:maxHeight="70dp"
+                    android:maxWidth="160dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/drawer_market"
+                    />
+            </RelativeLayout>
+            
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="start"
+                android:background="#FFFFFF"
+                android:orientation="horizontal" >
+
+                <ImageView
                     android:id="@+id/drawer_config"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
