채팅화면 개선

--- a/TripWithMe/res/layout/activity_chat.xml
+++ b/TripWithMe/res/layout/activity_chat.xml
@@ -71,7 +71,7 @@
             android:layout_height="match_parent" 
             android:divider="@null"
 			android:dividerHeight="0dp"
-            android:background="@drawable/sea1"/>
+            android:background="@drawable/glass2"/>
 
         <!-- 드러워 -->
 
