1.채팅 ui 수정 2.프로필 박의로운으로 바꿈 3.대화상대 제시카알바로 바꿈
ps.네비게이션바 프로필 사진 수정 필요

--- a/TripWithMe/res/layout/activity_chat.xml
+++ b/TripWithMe/res/layout/activity_chat.xml
@@ -33,7 +33,7 @@
             android:layout_marginBottom="2dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:text="장동건"
+            android:text="제시카 알바"
             android:textColor="#ffffff"
             android:textSize="20sp"
             android:textStyle="bold"
