인증번호 자동입력 추가

--- a/TripWithMe/res/layout/activity_login.xml
+++ b/TripWithMe/res/layout/activity_login.xml
@@ -59,12 +59,12 @@
                 android:gravity="center" >
 
                 <Button
-                    android:id="@+id/resendBtn"
+                    android:id="@+id/sendBtn"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:layout_weight="1"
                     android:background="@drawable/login_btn_ok2"
-                    android:text="@string/resend"
+                    android:text="@string/send_authentication_number"
                     android:textSize="6.5pt" />
 
                 <Button
